--- a/dep/lualib/doc/lua.css
+++ b/dep/lualib/doc/lua.css
@@ -64,8 +64,8 @@ p.menubar {
 }
 
 .menubar a:hover  {
-	margin: -3px -3px -3px -3px ;
-	padding: 3px  3px  3px  3px ;
+	margin: -3px;
+	padding: 3px;
 	border-radius: 4px ;
 }
 
